Fix mobile gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -552,7 +552,7 @@ header {
     }
 
     body {
-        padding-top: 120px;
+        padding-top: 110px;
     }
 
     .nav-menu {
